fixed screen size on smaller version

--- a/src/app/chat-interface/chat-interface.page.scss
+++ b/src/app/chat-interface/chat-interface.page.scss
@@ -1,6 +1,6 @@
 ion-content{
     --background:#fff;
-    height: 89vh;
+    height: 100vh;
 }
 
 .fromMe{
@@ -48,7 +48,7 @@ ion-footer {
 
 .mainmsg{
     width:100%;
-    height: 650px;
+    height: 60%;
     overscroll-behavior-y: auto;
     overflow-y: auto;
 
@@ -101,6 +101,10 @@ ion-content > ion-header {
 }
 .desktop{
     display: none;
+}
+
+ion-footer{
+    height:20%;
 }
 
 @media only screen and (min-width: 915px) {
